tests/ui/invalid_cancel_handle.stderr
error: `cancel_handle` may only be specified once per argument
 --> tests/ui/invalid_cancel_handle.rs:4:55
  |
4 | async fn cancel_handle_repeated(#[pyo3(cancel_handle, cancel_handle)] _param: String) {}
  |                                                       ^^^^^^^^^^^^^

error: async functions are only supported with the `experimental-async` feature
 --> tests/ui/invalid_cancel_handle.rs:8:1
  |
8 | async fn cancel_handle_repeated2(
  | ^^^^^

error: `cancel_handle` attribute can only be used with `async fn`
  --> tests/ui/invalid_cancel_handle.rs:16:53
   |
16 | fn cancel_handle_synchronous(#[pyo3(cancel_handle)] _param: String) {}
   |                                                     ^^^^^^

error: async functions are only supported with the `experimental-async` feature
  --> tests/ui/invalid_cancel_handle.rs:20:1
   |
20 | async fn cancel_handle_wrong_type(#[pyo3(cancel_handle)] _param: String) {}
   | ^^^^^

error: async functions are only supported with the `experimental-async` feature
  --> tests/ui/invalid_cancel_handle.rs:24:1
   |
24 | async fn missing_cancel_handle_attribute(_param: pyo3::coroutine::CancelHandle) {}
   | ^^^^^

error: `from_py_with` and `cancel_handle` cannot be specified together
  --> tests/ui/invalid_cancel_handle.rs:30:12
   |
30 |     #[pyo3(cancel_handle, from_py_with = cancel_handle)] _param: pyo3::coroutine::CancelHandle,
   |            ^^^^^^^^^^^^^

error[E0433]: failed to resolve: could not find `coroutine` in `pyo3`
   --> tests/ui/invalid_cancel_handle.rs:24:56
    |
 24 | async fn missing_cancel_handle_attribute(_param: pyo3::coroutine::CancelHandle) {}
    |                                                        ^^^^^^^^^ could not find `coroutine` in `pyo3`
    |
note: found an item that was configured out
   --> src/lib.rs:417:9
    |
416 | #[cfg(feature = "experimental-async")]
    |       ------------------------------ the item is gated behind the `experimental-async` feature
417 | pub mod coroutine;
    |         ^^^^^^^^^

error[E0433]: failed to resolve: could not find `coroutine` in `pyo3`
   --> tests/ui/invalid_cancel_handle.rs:30:72
    |
 30 |     #[pyo3(cancel_handle, from_py_with = cancel_handle)] _param: pyo3::coroutine::CancelHandle,
    |                                                                        ^^^^^^^^^ could not find `coroutine` in `pyo3`
    |
note: found an item that was configured out
   --> src/lib.rs:417:9
    |
416 | #[cfg(feature = "experimental-async")]
    |       ------------------------------ the item is gated behind the `experimental-async` feature
417 | pub mod coroutine;
    |         ^^^^^^^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0433`.
